k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bci-eeg
  labels:
    name: bci-eeg
    app: bci-eeg-app
